--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,8 +2,20 @@
   margin:0px;
   padding:0px;
   font-family: 'Do Hyeon', sans-serif;
+  //background: #007BFF;
 }
-
+.red
+{
+  background:Red;
+}
+.green
+{
+  background:green;
+}
+.black
+{
+  background:black;
+}
 
 /*CIRCLE SLIDER PORTION*/
 /* ============================= main menu_splash ====================== */
@@ -399,3 +411,231 @@
   }
 }
 /*END OF POPULAR DESTINATIONS*/
+
+/*CAROUSEL FOR HOT PACKAGE*/
+.hotpackage
+{
+  margin:40px;
+}
+#fh5co-tours,
+.fh5co-content-section {
+  padding: 7em 0;
+}
+#fh5co-tours,
+  .fh5co-content-section {
+    padding: 4em 0;
+  }
+
+.fh5co-tours {
+  margin-bottom: 30px;
+
+}
+.fh5co-tours > div {
+  display: block;
+  color: #000;
+  position: relative;
+  bottom: 0;
+  overflow: hidden;
+  -webkit-transition: 0.5s;
+  -o-transition: 0.5s;
+  transition: 0.5s;
+}
+.fh5co-tours > div img {
+  position: relative;
+  -webkit-transition: 0.5s;
+  -o-transition: 0.5s;
+  transition: 0.5s;
+  height:300px;
+}
+.fh5co-tours > div:after {
+  opacity: 1;
+  visibility: visible;
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  top: 0;
+  background: rgba(0, 0, 0, 0.3);
+  z-index: 8;
+  -webkit-transition: 0.5s;
+  -o-transition: 0.5s;
+  transition: 0.5s;
+}
+.fh5co-tours > div .desc {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 30px;
+  z-index: 12;
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+  background:rgba(0,0,0,0);
+}
+.fh5co-tours > div .desc h3 {
+  color: #fff;
+  margin: 0;
+  padding: 0;
+  opacity: 1;
+  font-size: 30px;
+  font-weight: 400;
+  visibility: visible;
+  margin-bottom: 5px;
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+}
+.fh5co-tours > div .desc span {
+  display: block;
+  color: rgba(255, 255, 255, 0.9);
+  margin-bottom: 5px;
+  background:rgba(0,0,0,0);
+
+}
+.fh5co-tours > div .desc .price {
+  font-size: 20px;
+  margin-bottom:7px;
+  color: #fff;
+}
+.fh5co-tours > div .desc .btn {
+  opacity: 1;
+  border: 2px solid #fff !important;
+  color: #fff !important;
+  letter-spacing: 1px !important;
+  font-weight: 400 !important;
+}
+.fh5co-tours > div .desc .btn:hover, .fh5co-tours > div .desc .btn:focus, .fh5co-tours > div .desc .btn:active {
+  border: 2px solid #007BFF !important;
+  background:#007BFF !important;
+  color: #fff !important;
+}
+.fh5co-tours > div:hover {
+  -webkit-box-shadow: 0px 18px 71px -10px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 18px 71px -10px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 18px 71px -10px rgba(0, 0, 0, 0.75);
+}
+.fh5co-tours > div:hover:after {
+  opacity: 1;
+  visibility: visible;
+  -webkit-box-shadow: inset 0px -34px 98px 8px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: inset 0px -34px 98px 8px rgba(0, 0, 0, 0.75);
+  -ms-box-shadow: inset 0px -34px 98px 8px rgba(0, 0, 0, 0.75);
+  -o-box-shadow: inset 0px -34px 98px 8px rgba(0, 0, 0, 0.75);
+  box-shadow: inset 0px -34px 98px 8px rgba(0, 0, 0, 0.75);
+  background: rgba(0, 0, 0, 0.2);
+}
+@media screen and (max-width: 768px) {
+  .fh5co-tours > div:hover:after {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+.fh5co-tours > div:hover img {
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -o-transform: scale(1.1);
+  transform: scale(1.1);
+}
+@media screen and (max-width: 768px) {
+  .fh5co-tours > div:hover img {
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -o-transform: scale(1);
+    transform: scale(1);
+  }
+}
+.hotpackage
+{
+  margin:0px;
+  background:#007BFF;
+
+}
+.hotpackage .packagelist
+{
+  margin:40px;
+  margin:0px;
+}
+.hotpackage .package-heading
+{
+  text-transform: uppercase;
+  //background:#007BFF;
+  padding:1em;
+  color:white;
+}
+.hotpackage .package-heading span
+{
+  font-size: 35px;
+  font-weight: 400;
+}
+.desc .package-title
+{
+  font-size: 25px;
+  color: blue;
+  font-weight: bold;
+}
+
+
+
+/*HOME FOOTER*/
+.footer-home
+{
+  background:#FFC107;
+  background: linear-gradient(#FFC107,#007BFF);
+  color:white;
+  //height:400px;
+  padding:25px;
+  background:black;
+
+}
+
+.footerlogo img
+{
+ height:190px;
+ width:190px;
+}
+.footerexplore
+{
+
+}
+.footerexplore ul li
+{
+  list-style-type: none;
+}
+.footerexplore ul li a
+{
+  text-decoration: none;
+  color:white;
+}
+
+.footersupport ul li
+{
+  list-style-type: none;
+}
+
+.footersupport ul li a
+{
+  text-decoration: none;
+  color:white;
+}
+.footerright img
+{
+  height:80px;
+}
+.footertitle
+{
+ font-size: 20px;
+}
+.footersocials ul li
+{
+  text-decoration: none;
+  list-style-type: none;
+  display: inline;
+  margin:3px 28px 2px 28px;
+}
+
+.footerend
+{
+  border-top:2px solid #007BFF;
+}
