--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -639,3 +639,139 @@
 {
   border-top:2px solid #007BFF;
 }
+
+/*ANOTHER PAGE*/
+/*BLOG PAGE*/
+.blognav
+{
+  position:fixed;
+  z-index:20;
+  width:100%;
+}
+.coverblog
+{
+  background:url('images/4.jpg');
+  background-attachment:fixed;
+  padding:150px 0px 80px 0px;
+
+}
+.blogresult
+{
+  padding:30px;
+  z-index:12;
+
+}
+.blogcontent
+{
+  background:#F5F6F7;
+  padding:30px;
+  margin:10px;
+    box-shadow: 0px 0.5px 1.5px black;
+
+}
+.blogcontent .blogdate
+{
+  color:green;
+}
+.blogcontent .shortdes
+{
+  font-size: 15px;
+}
+.blogcontent .blogauthor
+{
+  color:gray;
+}
+/*END OF BLOG PAGE*/
+
+
+/*NEW PAGE*
+/*BUS BOOKING PAGE*/
+.busbookingnav
+{
+  position: fixed;
+  z-index: 25;
+  width:100%;
+}
+.coverbusbooking
+{
+  padding:170px 0px 100px 0px;
+
+}
+#fh5co-features,
+.fh5co-content-section {
+  padding: 7em 0;
+}
+@media screen and (max-width: 768px) {
+
+  #fh5co-features,
+  .fh5co-content-section {
+    padding: 4em 0;
+  }
+}
+
+#fh5co-features {
+  padding: 5em 0;
+}
+#fh5co-features .feature-left {
+  margin-bottom: 40px;
+}
+@media screen and (max-width: 992px) {
+  #fh5co-features .feature-left {
+    margin-bottom: 30px;
+  }
+}
+#fh5co-features .feature-left .icon i {
+  color: #d9d9d9 !important;
+}
+#fh5co-features .feature-left .icon {
+  float: left;
+  text-align: center;
+  width: 15%;
+}
+@media screen and (max-width: 992px) {
+  #fh5co-features .feature-left .icon {
+    width: 10%;
+  }
+}
+@media screen and (max-width: 768px) {
+  #fh5co-features .feature-left .icon {
+    width: 15%;
+  }
+}
+#fh5co-features .feature-left .feature-copy {
+  float: right;
+  width: 100%;
+}
+@media screen and (max-width: 992px) {
+  #fh5co-features .feature-left .feature-copy {
+    width: 90%;
+  }
+}
+@media screen and (max-width: 768px) {
+  #fh5co-features .feature-left .feature-copy {
+    width: 85%;
+  }
+}
+@media screen and (max-width: 480px) {
+  #fh5co-features .feature-left .feature-copy {
+    width: 80%;
+  }
+}
+#fh5co-features .feature-left h3 {
+  font-size: 16px;
+  font-weight: 700;
+}
+#fh5co-features .feature-left p {
+  font-size: 15px;
+}
+#fh5co-features .feature-left p:last-child {
+  margin-bottom: 0;
+}
+
+.busfeature img
+{
+  height:100px;
+  width:100px;
+
+}
+/*END OF BUS BOOKING PAGE*/
