--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,6 +102,52 @@
 
 
 
+      /*RIBBON PART*/
+
+.beta .ribbon {
+   position: absolute;
+   left: -5px; top: -5px;
+   z-index: 1;
+   overflow: hidden;
+   width: 75px; height: 75px;
+   text-align: right;
+  transform: rotate(270deg);
+}
+.beta .ribbon span {
+   font-size: 10px;
+   color: #fff;
+   text-transform: uppercase;
+   text-align: center;
+   font-weight: bold; line-height: 20px;
+   transform: rotate(45deg);
+   -webkit-transform: rotate(45deg); /* Needed for Safari */
+   width: 100px; display: block;
+   box-shadow: 0 3px 10px -5px rgba(0, 0, 0, 1);
+   position: absolute;
+   top: 19px; right: -21px;
+   background:#e84c3d;
+}
+.beta .ribbon span::before {
+   content: '';
+   position: absolute;
+   left: 0px; top: 100%;
+   z-index: -1;
+   border-left: 3px solid #e84c3d;
+   border-right: 3px solid transparent;
+   border-bottom: 3px solid transparent;
+   border-top: 3px solid #e84c3d;
+}
+.beta .ribbon span::after {
+   content: '';
+   position: absolute;
+   right: 0%; top: 100%;
+   z-index: -1;
+   border-right: 3px solid #e84c3d;
+   border-left: 3px solid transparent;
+   border-bottom: 3px solid transparent;
+   border-top: 3px solid #e84c3d;
+}
+
 .front {
     z-index: 2;
     position: absolute;
@@ -775,3 +821,250 @@
 
 }
 /*END OF BUS BOOKING PAGE*/
+
+
+/*NEW PAGE -- HOTEL PAGE*/
+
+#colorlib-hotel {
+  width: 100%;
+  display: block;
+  float: left;
+  padding: 9em 0;
+  clear: both; }
+  @media screen and (max-width: 768px) {
+    #colorlib-hotel
+    {
+      padding: 5em 0; } }
+
+      .sidebar-wrap {
+        display: block; }
+        .sidebar-wrap .sidebar-heading {
+          font-size: 18px;
+          text-transform: uppercase;
+          margin-bottom: 30px; }
+        .sidebar-wrap .search-wrap {
+          background: #2C2E3E;
+          border: 1px solid #f0f0f0;
+          padding: 2em 20px;
+          -webkit-border-radius: 4px;
+          -moz-border-radius: 4px;
+          -ms-border-radius: 4px;
+          border-radius: 4px; }
+          .sidebar-wrap .search-wrap .sidebar-heading {
+            color: #fff; }
+        .sidebar-wrap .side {
+          margin-bottom: 1em;
+          padding:15px;
+          box-shadow: 0px 2px 3px black;
+          color:white;
+          background:#007BFF;
+         }
+        .sidebar-wrap .colorlib-form-2 label {
+          font-weight: normal;
+          color: black; }
+        .sidebar-wrap .colorlib-form-2 .form-control {
+          height: 50px;
+          -webkit-box-shadow: none;
+          box-shadow: none;
+          font-size: 16px;
+          -webkit-appearance: none;
+          -moz-appearance: none;
+          -ms-appearance: none;
+          -o-appearance: none;
+          appearance: none;
+          background: #fafafa;
+          border: 2px solid rgba(0, 0, 0, 0.05);
+          color: rgba(0, 0, 0, 0.7); }
+          .sidebar-wrap .colorlib-form-2 .form-control:active, .sidebar-wrap .colorlib-form-2 .form-control:focus {
+            -webkit-box-shadow: none;
+            box-shadow: none;
+            border-color: #FFDD00; }
+          .sidebar-wrap .colorlib-form-2 .form-control::-webkit-input-placeholder {
+            /* Chrome/Opera/Safari */
+            color: rgba(0, 0, 0, 0.7); }
+          .sidebar-wrap .colorlib-form-2 .form-control::-moz-placeholder {
+            /* Firefox 19+ */
+            color: rgba(0, 0, 0, 0.7); }
+          .sidebar-wrap .colorlib-form-2 .form-control:-ms-input-placeholder {
+            /* IE 10+ */
+            color: rgba(0, 0, 0, 0.7); }
+          .sidebar-wrap .colorlib-form-2 .form-control:-moz-placeholder {
+            /* Firefox 18- */
+            color: rgba(0, 0, 0, 0.7); }
+        .sidebar-wrap .colorlib-form-2 .form-group {
+          margin-bottom: 15px; }
+          .sidebar-wrap .colorlib-form-2 .form-group .form-field {
+            position: relative;
+            padding: 0;
+            margin: 0; }
+            .sidebar-wrap .colorlib-form-2 .form-group .form-field .icon {
+              position: absolute;
+              top: 50%;
+              -webkit-transform: translateY(-50%);
+              -moz-transform: translateY(-50%);
+              -ms-transform: translateY(-50%);
+              -o-transform: translateY(-50%);
+              transform: translateY(-50%);
+              right: 20px;
+              color: rgba(0, 0, 0, 0.5); }
+                  .sidebar-wrap .colorlib-form-2 .form-group label
+                  {
+                    color:white;
+                  }
+            .sidebar-wrap .colorlib-form-2 .form-group .form-field .form-control {
+              padding-right: 50px; }
+        .sidebar-wrap .colorlib-form-2 textarea.form-control {
+          height: inherit;
+          resize: vertical; }
+        .sidebar-wrap .colorlib-form-2 .btn-block {
+          margin-top: 28px;
+          padding: 12px !important; }
+        .sidebar-wrap .colorlib-form-2 .rate i {
+          color: #FFDD00;
+          margin: 0 5px; }
+        .sidebar-wrap .colorlib-form-2 .place {
+          font-size: 16px;
+          margin-left: 10px;
+        color:white; }
+        .sidebar-wrap .category {
+          margin: 0; }
+          .sidebar-wrap .category li {
+            list-style: none;
+            margin-bottom: 10px; }
+            .sidebar-wrap .category li a {
+              color: #000; }
+        .sidebar-wrap .blog-entry-side .blog-post .desc h3 {
+          font-size: 18px; }
+
+          #colorlib-hotel .owl-carousel {
+            z-index: 0; }
+
+          #colorlib-hotel .owl-carousel .owl-stage-outer {
+            z-index: -1; }
+
+          #colorlib-hotel .owl-theme .owl-controls {
+            margin-top: -10px;
+            z-index: 1;
+            position: absolute;
+            top: -30px;
+            left: 0;
+            right: 0;
+            margin-top: -30px; }
+
+          #colorlib-hotel .owl-theme .owl-controls .owl-nav [class*=owl-] {
+            -webkit-transition: 0.3s;
+            -o-transition: 0.3s;
+            transition: 0.3s;
+            -webkit-border-radius: 1px;
+            -moz-border-radius: 1px;
+            -ms-border-radius: 1px;
+            border-radius: 1px;
+            background: transparent;
+            background: #f2f2f2;
+            padding: 5px 5px;
+            opacity: 1; }
+            #colorlib-hotel .owl-theme .owl-controls .owl-nav [class*=owl-] .owl-direction {
+              background: transparent;
+              color: #000;
+              -webkit-box-shadow: none;
+              box-shadow: none;
+              border: none; }
+            #colorlib-hotel .owl-theme .owl-controls .owl-nav [class*=owl-]:hover {
+              background: #00BBF0; }
+
+          .hotel-entry {
+            margin-bottom: 3em;
+          }
+            .hotel-entry .hotel-img {
+              height: 280px;
+              display: block;
+              margin-bottom: 20px;
+              position: relative; }
+              .hotel-entry .hotel-img .price {
+                position: absolute;
+                bottom: 0;
+                left: 0;
+                background: #00BBF0;
+                color: #fff;
+                padding: 8px 12px;
+                margin: 0; }
+                .hotel-entry .hotel-img .price span {
+                  font-size: 18px;
+                  font-weight: 700;
+                }
+                  .hotel-entry .hotel-img .price span small {
+                    font-size: 16px; }
+            .hotel-entry .desc h3 {
+              margin-bottom: 10px; }
+              .hotel-entry .desc h3 a {
+                color: #000; }
+            .hotel-entry .desc .place {
+              color: #b3b3b3;
+              font-size: 12px;
+              display: block;
+              margin-bottom: 15px; }
+            .hotel-entry .desc .star {
+              margin-bottom: 10px;
+              font-size: 12px;
+              color: #b3b3b3; }
+              .hotel-entry .desc .star span i {
+                color: #FFDD00; }
+
+          .heading2 {
+            margin-bottom: 5em;
+            padding: 20px 30px;
+            background: #f7f7f7;
+            border: 1px solid #f0f0f0;
+            -webkit-border-radius: 4px;
+            -moz-border-radius: 4px;
+            -ms-border-radius: 4px;
+            border-radius: 4px; }
+            .heading2 h2 {
+              font-size: 34px;
+              margin-bottom: 20px;
+              line-height: 1.5;
+              color: #000;
+              position: relative;
+              margin: 0;
+              text-transform: uppercase; }
+
+          .room-wrap {
+            display: block;
+            margin-bottom: 4em; }
+            .room-wrap h2 {
+              font-size: 20px;
+              text-transform: uppercase; }
+            .room-wrap .price span {
+              font-size: 20px;
+              color: #00BBF0; }
+            .room-wrap .price small {
+              font-size: 14px; }
+            .room-wrap .desc {
+              padding: 20px 0 0 0; }
+            .room-wrap .day-tour {
+              display: block;
+              margin-bottom: 20px;
+              color: #b3b3b3; }
+
+          .room-img {
+            display: block;
+            height: 300px; }
+
+      .hotellist img
+      {
+        width:100%;
+      }
+      .hotellist .price
+      {
+        background:#00BBF0;
+        display:inline;
+        padding:5px;
+        font-size:8px;
+        color:white;
+      }
+      .hotellist .location img
+      {
+        height:20px;
+        width:20px;
+      }
+/*END OF HOTEL PAGE*/
