--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,6 +59,7 @@
    width: 100%;
     height: 100%;
     background:#007BFF;
+    //background:#8DC63F;
    border-radius:50%;
     -moz-border-radius:50%;
     -webkit-border-radius:50%;
@@ -1068,3 +1069,113 @@
         width:20px;
       }
 /*END OF HOTEL PAGE*/
+
+/*NEW PAGE RENTAL INSIDE PAGE*/
+#fh5co-car
+{
+  padding: 7em 0;
+}
+@media screen and (max-width: 768px) {
+  #fh5co-car,
+  {
+    padding: 4em 0;
+  }
+}
+
+#fh5co-car .car {
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  -moz-flex-wrap: wrap;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  width: 100%;
+  float: left;
+  margin-bottom: 30px;
+}
+#fh5co-car .car .one-4 {
+  width: 40%;
+  float: left;
+  background: #F78536;
+  padding: 30px;
+}
+#fh5co-car .car .one-4 h3, #fh5co-car .car .one-4 span {
+  color: #fff;
+}
+#fh5co-car .car .one-4 span {
+  display: block;
+  font-weight: 400;
+  font-size: 20px;
+}
+#fh5co-car .car .one-4 small {
+  font-size: 14px;
+}
+#fh5co-car .car .one-1 {
+  width: 60%;
+  float: right;
+  height: auto;
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.feature-left {
+  float: left;
+  width: 100%;
+  margin-bottom: 40px;
+  position: relative;
+}
+.feature-left .icon {
+  float: left;
+  text-align: center;
+  width: 15%;
+}
+@media screen and (max-width: 992px) {
+  .feature-left .icon {
+    width: 10%;
+  }
+}
+@media screen and (max-width: 768px) {
+  .feature-left .icon {
+    width: 15%;
+  }
+}
+.feature-left .icon i {
+  display: table-cell;
+  vertical-align: middle;
+  font-size: 40px;
+  color: #F78536;
+}
+.feature-left .feature-copy {
+  float: right;
+  width: 80%;
+}
+@media screen and (max-width: 992px) {
+  .feature-left .feature-copy {
+    width: 90%;
+  }
+}
+@media screen and (max-width: 768px) {
+  .feature-left .feature-copy {
+    width: 85%;
+  }
+}
+@media screen and (max-width: 480px) {
+  .feature-left .feature-copy {
+    width: 80%;
+  }
+}
+.feature-left .feature-copy h3 {
+  font-size: 18px;
+  color: #1a1a1a;
+  margin-bottom: 10px;
+}
+.feature-left .feature-copy p {
+  font-size: 16px;
+  line-height: 1.8;
+  margin-bottom: 10px;
+}
+
+/*END OF RENTAL INSIDE*/
